tests/bad/flags_enum_values.oc
/// fail: Enums with values cannot be flag enums

[flags]
enum Foo {
    x: i32
}